パスワード入力のLayout調整

--- a/app/src/main/res/layout/password_prompt_dlg.xml
+++ b/app/src/main/res/layout/password_prompt_dlg.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/password_prompt_dlg_view"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:padding="3dp"
+    android:background="@drawable/dialog_box_outline"
     android:orientation="vertical"
-    android:textAppearance="?android:attr/textAppearanceMedium"
     tools:ignore="HardcodedText,RtlHardcoded,LabelFor" >
 
     <LinearLayout
@@ -33,7 +34,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#ff0000"
         android:visibility="gone" />
 
@@ -68,12 +69,29 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:hint="Password"
+                android:hint="@string/msgs_zip_parm_password_hint"
                 android:inputType="textPassword"
                 android:visibility="gone" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
 
-    <include layout="@layout/password_prompt_dlg_ok_cancel"/>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/password_prompt_dlg_cancel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/msgs_common_dialog_cancel" />
+        <Button
+            android:id="@+id/password_prompt_dlg_ok_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/msgs_common_dialog_ok"/>
+    </LinearLayout>
 </LinearLayout>
